名前の変更

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ h2 {
 </head>
 <body>
 
-<h1>ICTL - 大学入試共通テスト「情報」問題言語 サンプルプログラム集</h1>
+<h1>DNCL2 - 大学入試共通テスト「情報」問題言語 サンプルプログラム集</h1>
 
 <p><a href="https://nodai2hitc.github.io/ictl/">実行環境</a>にコピペして実行してください。</p>
 
