HTMLのtitleの名前変更

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 <meta charset="utf-8" />
-<title>ICTL - 大学入試共通テスト「情報」問題言語 サンプルプログラム集</title>
+<title>DNCL2 - 大学入試共通テスト「情報」問題言語 サンプルプログラム集</title>
 <style type="text/css">
 
 @media (max-width: 700px) {
