リンク先の修正

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ h2 {
 <input type="button" value="コピー" id="shisaku2022_2_copy" class="copy_button" />
 
 <h2>試作問題2022概要 - 二分探索</h2>
-<p><a href="https://www.dnc.ac.jp/albums/abm.php?f=abm00041798.pdf&n=6-2-1+%E8%A9%A6%E4%BD%9C%E5%95%8F%E9%A1%8C%E3%80%8E%E6%83%85%E5%A0%B1%E2%85%A0%E3%80%8F.pdf">試作問題『情報Ⅰ』</a>より引用。</p>
+<p><a href="https://www.dnc.ac.jp/albums/abm.php?f=abm00041797.pdf&n=6-1+%E6%A6%82%E8%A6%81%E3%80%8C%E6%83%85%E5%A0%B1%E3%80%8D.pdf">概要「情報」</a>より引用。</p>
 <textarea id="shisaku2022_gaiyou" rows="20">
     (1)  Data = [3,18,29,33,48,52,62,77,89,97]
     (2)  kazu = 要素数(Data)
